# TetrisMirror-SFML-CPP

./: CMakeLists.txt  LICENSE  README.md  TetrisMirror.sln  TetrisMirror.vcxproj  TetrisMirror.vcxproj.filters
Accounts/111/: 111Setting.txt
Accounts/123/: 123Setting.txt
Accounts/123/Saves/: Save1.txt  Save2.txt  Save4.txt  Save5.txt
Accounts/12345/: 12345Setting.txt
Accounts/12345/Saves/: Save1.txt  Save2.txt  Save6.txt
Accounts/123456/: 123456Setting.txt
Accounts/123456/Saves/: Save1.txt
Accounts/12345678/: 12345678Setting.txt
Accounts/12345678/Saves/: Save1.txt
Accounts/YJP/: YJPSetting.txt
Accounts/YJP/Saves/: Save1.txt
Accounts/abc/: abcSetting.txt
Accounts/abc/Saves/: Save3.txt
Accounts/qwe/: qweSetting.txt
Accounts/qwe/Saves/: Save1.txt
Inc/: Accounts.h  Application.h  Button.h  Command.h  CommandQueue.h  Component.h  Container.h  Foreach.h  GameSettingsState.h  GameState.h  GameoverState.h  KeySettingState.h  Label.h  LoadSavesState.h  LoginState.h  MagicState.h  MenuState.h  MusicPlayer.h  PauseState.h  RankState.h  ResourceHolder.h  ResourceHolder.inl  ResourceIdentifiers.h  SaveGameState.h  Saves.h  SoundPlayer.h  State.h  StateIdentifiers.h  StateStack.h  TextField.h  TitleState.h  Utility.h
Src/: Accounts.cpp  Application.cpp  Command.cpp  CommandQueue.cpp  Component.cpp  Container.cpp  GameSettingsState.cpp  GameState.cpp  GameoverState.cpp  KeySettingState.cpp  Label.cpp  LoadSavesState.cpp  LoginState.cpp  MagicState.cpp  Main.cpp  MenuState.cpp  MusicPlayer.cpp  PauseState.cpp  RankState.cpp  SaveGameState.cpp  Saves.cpp  SoundPlayer.cpp  State.cpp  StateStack.cpp  TextField.cpp  TitleState.cpp  Utility.cpp  button.cpp
实训报告/: ~$实训报告.doc  实训报告.doc
